@@ -7,6 +7,8 @@ mirror_metadata file could become un-synced when a file is deleted
 when rdiff-backup is running and later the directory that file is in
 gets deleted.)
 
+Librsync signature blocksize now based on square root of file length.
+
 
 New in v1.0.0 (2005/08/14)
 --------------------------
